add_subdirectory(exercise)

add_executable(first first.cpp)

add_executable(render render.cpp)
add_executable(render-ebo render_ebo.cpp)

add_executable(test-shader test_shader.cpp)
add_executable(shader1 shader1.cpp)
add_executable(shader2 shader2.cpp)
add_executable(shader3 shader3.cpp)

add_executable(test-stb test_stb.cpp)
add_executable(texture texture.cpp)

add_executable(test-glm test_glm.cpp)
add_executable(translate translate.cpp)
add_executable(coordinate coordinate.cpp)
add_executable(camera camera.cpp)